module(
    name = "axlearn",
    version = "0.0.1",
)

bazel_dep(name = "rules_python", version = "1.5.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(hub_name = "pip", python_version = "3.12", requirements_lock = "//:requirements_lock.txt")
use_repo(pip, "pip")
