# Bazel is used to compile and test however releaser is done following PEP 517.
# Version 0.0.0 is the standard placeholder version used in the Bazel community.
module(
    name = "axlearn",
    version = "0.0.0",
)


bazel_dep(name = "rules_python", version = "1.8.1")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    extra_pip_args = [
        "--extra-index-url=https://pypi.org/simple/",
        "--find-links=https://storage.googleapis.com/axlearn-wheels/wheels.html",
        "--find-links=https://storage.googleapis.com/jax-releases/libtpu_releases.html",
    ],
    hub_name = "axlearn_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "axlearn_pip")

# uv toolchain (used by //:requirements lock rule)
uv = use_extension("@rules_python//python/uv:uv.bzl", "uv")
uv.configure(version = "0.9.25")
use_repo(uv, "uv")

register_toolchains("@uv//:all")
